vitrail-sqlite-macros/tests/ui/fail/query_pagination_wrong_type.stderr
error[E0308]: mismatched types
  --> tests/ui/fail/query_pagination_wrong_type.rs:20:10
   |
20 | #[derive(QueryResult)]
   |          ^^^^^^^^^^^
   |          |
   |          expected `&i64`, found `&String`
   |          arguments to this function are incorrect
   |
   = note: expected reference `&i64`
              found reference `&std::string::String`
note: function defined here
  --> tests/ui/fail/query_pagination_wrong_type.rs:20:10
   |
20 | #[derive(QueryResult)]
   |          ^^^^^^^^^^^
   = note: this error originates in the derive macro `QueryResult` (in Nightly builds, run with -Z macro-backtrace for more info)
